--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 </head>
 <body>
 
-  <h1>> dead1nfluence ~</h1>
+  <h1>> dead1nfluence</h1>
 
   <div class="bio">
-    <p class="prompt-style">[~] cat whoami.txt</p>
+    <p class="prompt-style">[~] whoami </p>
     <p>Penetration Tester<br>
-       This blog logs payloads, techniques, and war stories from the field.</p>
+       This blog is for research, reviews, and whatever else comes to mind that I feel like sharing</p>
   </div>
 
   <div class="articles">
