--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <h2>[*] Latest Posts</h2>
 
     <div class="article">
-      <a href="posts/placeholder.html">Place Holder</a><br>
-      <span>// lorem ipsum or whatever</span>
+      <a href="posts/Hardware-Testing-Purchase-List.html">Basic Hardware Testing Purchase Guide</a><br>
+      <span>// A basic hardware and IoT purchase guide for budget setups. Sources have been compiled for Canadian researchers.</span>
     </div>
 
 
