--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
 
     h1, h2, a, p, .prompt-style, .article span {
-      color: #00ff00;
+      color: #d3d7cf;
       text-align: center;
     }
 
@@ -35,7 +35,7 @@
     }
 
     .articles {
-      border-top: 1px solid #00ff00;
+      border-top: 1px solid #d3d7cf;
       padding-top: 1rem;
     }
 
