--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@
     <h2>[*] Latest Posts</h2>
 
     <div class="article">
+      <a href="posts/IoT-Course-Review.html">Andrew Bellini's IoT and Hardware Hacking Course</a><br>
+      <span>// A review of Andrew Bellini's "Beginner's Guide to IoT and Hardware Hacking" course on TCM.</span>
+    </div>
+    <div class="article">
       <a href="posts/Hardware-Testing-Purchase-List.html">Basic Hardware Testing Purchase Guide</a><br>
       <span>// A basic hardware and IoT purchase guide for budget setups. Sources have been compiled for Canadian researchers.</span>
-    </div>
-
+    </div
 
     <!-- Add more articles here -->
   </div>
