--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
 
   <div class="articles">
     <h2>[*] Latest Posts</h2>
-
+    
+    <div class="article">
+      <a href="posts/agentZeroSecurityWriteup.html">Agent Zero Security Research</a><br>
+      <span>// A short blog on security research performed on the Agent Zero open-source project.</span>
+    </div>
     <div class="article">
       <a href="posts/IoT-Course-Review.html">Andrew Bellini's IoT and Hardware Hacking Course</a><br>
       <span>// A review of Andrew Bellini's "Beginner's Guide to IoT and Hardware Hacking" course on TCM.</span>
