--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
 
   <div class="articles">
     <h2>[*] Latest Posts</h2>
-    
+    <div class="article">
+      <a href="posts/llmChatReview.html">I scraped every public LLM chat so you didn't have to</a><br>
+      <span>// I scraped and grepped every public LLM shared link, found secrets, and documented it all.</span>
+    </div>
     <div class="article">
       <a href="posts/agentZeroSecurityWriteup.html">Agent Zero Security Research</a><br>
       <span>// A short blog on security research performed on the Agent Zero open-source project.</span>
