--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="bio">
     <p class="prompt-style">[~] whoami </p>
     <p>Penetration Tester<br>
-       This blog is for research, reviews, and whatever else comes to mind that I feel like sharing</p>
+       This blog is for research, reviews, and whatever else comes to mind that I feel like sharing. You can contact me at: contact@julian-b[.]xyz for any inquiries.</p>
   </div>
 
   <div class="articles">
