--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <div class="articles">
     <h2>[*] Latest Posts</h2>
     <div class="article">
-      <a href="posts/phishingWithGrok.html">Phishing With Grok</a><br>
+      <a href="posts/phishingWithGrok.html">Stealing Your Chats In 2 Clicks</a><br>
       <span>// Using clickable links and hidden ASCII characters, I detail how a built-in feature of Grok can be used to phish unsuspecting users and exfiltrate memory.</span>
     </div>
     <div class="article">
