--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
     .article {
       margin-bottom: 2rem;
     }
+    
+    .vulnerabilities ul {
+     max-width: 800px;
+      width: 100%;
+      text-align: left;
+      margin-bottom: 3rem;
+
+    }
+
   </style>
 </head>
 <body>
@@ -50,8 +59,8 @@
 
   <div class="bio">
     <p class="prompt-style">[~] whoami </p>
-    <p>Penetration Tester<br>
-       This blog is for research, reviews, and whatever else comes to mind that I feel like sharing. You can contact me at: contact@julian-b[.]xyz for any inquiries.</p>
+    <p>Penetration Tester & Security Researcher<br>
+       This blog is for research and whatever else comes to mind that I feel like sharing. You can contact me at: contact@julian-b[.]xyz for any inquiries.</p>
   </div>
 
   <div class="articles">
@@ -80,6 +89,23 @@
     <!-- Add more articles here -->
   </div>
 
+  <div class="vulnerabilities">
+    <h2>[*] Vulnerabilities Discovered:</h2>
+    <ul>
+      <li>CVE-2024-27474 (Leantime) CSRF</li>
+      <li>CVE-2024-27476 (Leantime) Authenticated XSS</li>
+      <li>CVE-2024-41959 (Mailcow) Unauthenticated XSS</li>
+      <li>CVE-2024-41960 (Mailcow) Authenticated XSS</li>
+      <li>CVE-2024-45438 (SpamTitan) Unauthenticated User Creation</li>
+      <li>CVE-2025-XXXX (MindsDB) File Upload Path Traversal to RCE</li>
+      <li>CVE-2025-XXXX (MindsDB) File Upload Path Traversal to RCE</li>
+      <li>CVE-2025-XXXX (Agent Zero) CSRF File Upload to RCE</li>
+      <li>CVE-2025-XXXX (Agent Zero) CSRF File Upload to RCE</li>
+    </ul>
+  </div>
+</div>
+
+  
+   </div>
 </body>
 </html>
-
