--- a/index.html
+++ b/index.html
@@ -28,13 +28,12 @@
       text-decoration: underline;
     }
 
-    .bio, .articles {
+    .bio, .articles, .vulnerabilities {
       max-width: 800px;
       width: 100%;
-      margin-bottom: 3rem;
     }
 
-    .articles {
+    .articles, .vulnerabilities {
       border-top: 1px solid #d3d7cf;
       padding-top: 1rem;
     }
@@ -58,9 +57,10 @@
   <h1>> dead1nfluence</h1>
 
   <div class="bio">
-    <p class="prompt-style">[~] whoami </p>
+    <h3 class="prompt-style">[~] whoami </h3>
     <p>Penetration Tester & Security Researcher<br>
-       This blog is for research and whatever else comes to mind that I feel like sharing. You can contact me at: contact@julian-b[.]xyz for any inquiries.</p>
+       This blog is for research and whatever else comes to mind that I feel like sharing.</p>
+       <p>You can contact me at: contact@julian-b[.]xyz for any inquiries.</p>
   </div>
 
   <div class="articles">
@@ -101,9 +101,9 @@
       <li>CVE-2025-XXXX (MindsDB) File Upload Path Traversal to RCE</li>
       <li>CVE-2025-XXXX (Agent Zero) CSRF File Upload to RCE</li>
       <li>CVE-2025-XXXX (Agent Zero) CSRF File Upload to RCE</li>
+      <li>Many more to come...</li>
     </ul>
   </div>
-</div>
 
   
    </div>
