--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
       <li>CVE-2025-XXXX (MindsDB) File Upload Path Traversal to RCE</li>
       <li>CVE-2025-XXXX (Agent Zero) CSRF File Upload to RCE</li>
       <li>CVE-2025-XXXX (Agent Zero) CSRF File Upload to RCE</li>
+      <li>CVE-2025-XXXX (SafeLine WAF) Authenticated XSS</li>
+
       <li>Many more to come...</li>
     </ul>
   </div>
