--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   </div>
 
   <div class="vulnerabilities">
-    <h2>[*] Vulnerabilities Discovered:</h2>
+    <h2>[*] Vulnerabilities Discovered</h2>
     <ul>
       <li>CVE-2024-27474 (Leantime) CSRF</li>
       <li>CVE-2024-27476 (Leantime) Authenticated XSS</li>
