--- a/index.html
+++ b/index.html
@@ -90,18 +90,18 @@
   </div>
 
   <div class="vulnerabilities">
-    <h2>[*] Vulnerabilities Discovered</h2>
+    <h2>[*] Vulnerabilities Disclosed</h2>
     <ul>
-      <li>CVE-2024-27474 (Leantime) CSRF</li>
-      <li>CVE-2024-27476 (Leantime) Authenticated XSS</li>
-      <li>CVE-2024-41959 (Mailcow) Unauthenticated XSS</li>
-      <li>CVE-2024-41960 (Mailcow) Authenticated XSS</li>
-      <li>CVE-2024-45438 (SpamTitan) Unauthenticated User Creation</li>
-      <li>CVE-2025-XXXX (MindsDB) File Upload Path Traversal to RCE</li>
-      <li>CVE-2025-XXXX (MindsDB) File Upload Path Traversal to RCE</li>
-      <li>CVE-2025-XXXX (Agent Zero) CSRF File Upload to RCE</li>
-      <li>CVE-2025-XXXX (Agent Zero) CSRF File Upload to RCE</li>
-      <li>CVE-2025-XXXX (SafeLine WAF) Authenticated XSS</li>
+      <li><a href="https://nvd.nist.gov/vuln/detail/CVE-2024-27474">CVE-2024-27474 (Leantime) CSRF</a></li>
+      <li><a href="https://nvd.nist.gov/vuln/detail/CVE-2024-27476">CVE-2024-27476 (Leantime) Authenticated XSS</a></li>
+      <li><a href="https://nvd.nist.gov/vuln/detail/CVE-2024-41959">CVE-2024-41959 (Mailcow) Unauthenticated XSS</a></li>
+      <li><a href="https://nvd.nist.gov/vuln/detail/CVE-2024-41960">CVE-2024-41960 (Mailcow) Authenticated XSS</a></li>
+      <li><a href="https://nvd.nist.gov/vuln/detail/CVE-2024-45438">CVE-2024-45438 (SpamTitan) Unauthenticated User Creation</a></li>
+      <li><a href="/">CVE-2025-XXXX (MindsDB) File Upload Path Traversal to RCE</a></li>
+      <li><a href="/">CVE-2025-XXXX (MindsDB) File Upload Path Traversal to RCE</a></li>
+      <li><a href="posts/agentZeroSecurityWriteup.html">CVE-2025-XXXX (Agent Zero) CSRF File Upload to RCE</a></li>
+      <li><a href="posts/agentZeroSecurityWriteup.html">CVE-2025-XXXX (Agent Zero) CSRF File Upload to RCE</a></li>
+      <li><a href="https://www.linkedin.com/pulse/xss-safeline-waf-julian-b-f8ysc/">CVE-2025-XXXX (SafeLine WAF) Authenticated XSS</a></li>
 
       <li>Many more to come...</li>
     </ul>
