--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 
   <div class="articles">
     <h2>[*] Latest Posts</h2>
+        <div class="article">
+      <a href="posts/spamtitan_vuln.html">Unauthenticated User Creation in SpamTitan</a><br>
+      <span>// Vulnerability disclosure. A missing authorization vulnerability discovered during research performed with Philippe Caturegli of Seralys.</span>
+    </div>
     <div class="article">
       <a href="posts/phishingWithGrok.html">Stealing Your Chats In 2 Clicks</a><br>
       <span>// Using clickable links and hidden ASCII characters, I detail how a built-in feature of Grok can be used to phish unsuspecting users and exfiltrate memory.</span>
@@ -96,7 +100,7 @@
       <li><a href="https://nvd.nist.gov/vuln/detail/CVE-2024-27476">CVE-2024-27476 (Leantime) Authenticated XSS</a></li>
       <li><a href="https://nvd.nist.gov/vuln/detail/CVE-2024-41959">CVE-2024-41959 (Mailcow) Unauthenticated XSS</a></li>
       <li><a href="https://nvd.nist.gov/vuln/detail/CVE-2024-41960">CVE-2024-41960 (Mailcow) Authenticated XSS</a></li>
-      <li><a href="https://nvd.nist.gov/vuln/detail/CVE-2024-45438">CVE-2024-45438 (SpamTitan) Unauthenticated User Creation</a></li>
+      <li><a href="posts/spamtitan_vuln.html">CVE-2024-45438 (SpamTitan) Unauthenticated User Creation</a></li>
       <li><a href="/">CVE-2025-XXXX (MindsDB) File Upload Path Traversal to RCE</a></li>
       <li><a href="/">CVE-2025-XXXX (MindsDB) File Upload Path Traversal to RCE</a></li>
       <li><a href="posts/agentZeroSecurityWriteup.html">CVE-2025-XXXX (Agent Zero) CSRF File Upload to RCE</a></li>
