--- a/index.html
+++ b/index.html
@@ -88,10 +88,21 @@
     <div class="article">
       <a href="posts/Hardware-Testing-Purchase-List.html">Basic Hardware Testing Purchase Guide</a><br>
       <span>// A basic hardware and IoT purchase guide for budget setups. Sources have been compiled for Canadian researchers.</span>
-    </div
+    </div>
 
     <!-- Add more articles here -->
   </div>
+  </div>
+  <div class="articles">
+    <h2>[*] Publications</h2>
+    <div class="article">
+      <a href="https://www.404media.co/grok-exposes-underlying-prompts-for-its-ai-personas-even-putting-things-in-your-ass/">Grok Exposes Underlying Prompts for Its AI Personas: ‘EVEN PUTTING THINGS IN YOUR ASS’</a><br>
+      <span>// The website for Elon Musk's Grok is exposing prompts for its anime girl, therapist, and conspiracy theory AI personas.</span>
+    </div>
+    <div class="article">
+      <a href="https://www.404media.co/more-than-130-000-claude-grok-chatgpt-and-other-llm-chats-readable-on-archive-org/">More than 130,000 Claude, Grok, ChatGPT, and Other LLM Chats Readable on Archive.org</a><br>
+      <span>// The issue of publicly saving shared LLM chats is bigger than just Google.</span>
+    </div>
 
   <div class="vulnerabilities">
     <h2>[*] Vulnerabilities Disclosed</h2>
