--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
       <li><a href="posts/spamtitan_vuln.html">CVE-2024-45438 (SpamTitan) Unauthenticated User Creation</a></li>
       <li><a href="/">CVE-2025-XXXX (MindsDB) File Upload Path Traversal to RCE</a></li>
       <li><a href="/">CVE-2025-XXXX (MindsDB) File Upload Path Traversal to RCE</a></li>
-      <li><a href="posts/agentZeroSecurityWriteup.html">CVE-2025-XXXX (Agent Zero) CSRF File Upload to RCE</a></li>
-      <li><a href="posts/agentZeroSecurityWriteup.html">CVE-2025-XXXX (Agent Zero) CSRF File Upload to RCE</a></li>
-      <li><a href="https://www.linkedin.com/pulse/xss-safeline-waf-julian-b-f8ysc/">CVE-2025-XXXX (SafeLine WAF) Authenticated XSS</a></li>
+      <li><a href="posts/agentZeroSecurityWriteup.html">CVE-2025-55881 (Agent Zero) CSRF File Upload to RCE</a></li>
+      <li><a href="posts/agentZeroSecurityWriteup.html">CVE-2025-55882 (Agent Zero) CSRF File Upload to RCE</a></li>
+      <li><a href="https://www.linkedin.com/pulse/xss-safeline-waf-julian-b-f8ysc/">CVE-2025-55883 (SafeLine WAF) Authenticated XSS</a></li>
 
       <li>Many more to come...</li>
     </ul>
