--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
   <div class="articles">
     <h2>[*] Latest Posts</h2>
         <div class="article">
+      <a href="posts/mindsdb_report.html">Path Traversal to RCE in MindsDB</a><br>
+      <span>// Vulnerability disclosure. By combining a path traversal with an arbitrary file upload vulnerability, RCE was achieved on the MindsDB AI analytics engine.</span>
+    </div>
       <a href="posts/spamtitan_vuln.html">Unauthenticated User Creation in SpamTitan</a><br>
       <span>// Vulnerability disclosure. A missing authorization vulnerability discovered during research performed with Philippe Caturegli of Seralys.</span>
     </div>
