--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       padding: 2rem;
     }
 
-    h1, h2, a, p, .prompt-style, .article span {
+    h1, h2, a, p, .prompt-style, span {
       color: #d3d7cf;
       text-align: center;
     }
@@ -49,6 +49,12 @@
       margin-bottom: 3rem;
 
     }
+    
+    a, p, .article span {
+    color: #d3d7cf;
+    text-align: left;
+    }
+
 
   </style>
 </head>
