--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       padding: 2rem;
     }
 
-    h1, h2, a, p, .prompt-style, span {
+    h1, h2, .prompt-style {
       color: #d3d7cf;
       text-align: center;
     }
@@ -75,6 +75,7 @@
       <a href="posts/mindsdb_report.html">Path Traversal to RCE in MindsDB</a><br>
       <span>// Vulnerability disclosure. By combining a path traversal with an arbitrary file upload vulnerability, RCE was achieved on the MindsDB AI analytics engine.</span>
     </div>
+    <div class="article">
       <a href="posts/spamtitan_vuln.html">Unauthenticated User Creation in SpamTitan</a><br>
       <span>// Vulnerability disclosure. A missing authorization vulnerability discovered during research performed with Philippe Caturegli of Seralys.</span>
     </div>
