--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ a:hover {
   <div class="articles">
     <h2>[*] Latest Posts</h2>
         <div class="article">
-      <a href="posts/mindsdb_report.html">Path Traversal to RCE in MindsDB</a><br>
+      <a href="posts/mindsdb_report.html">Don't Mind(sDB) me: RCE on MindsDB</a><br>
       <span>// Vulnerability disclosure. By combining a path traversal with an arbitrary file upload vulnerability, RCE was achieved on the MindsDB AI analytics engine.</span>
     </div>
     <div class="article">
