--- a/index.html
+++ b/index.html
@@ -160,6 +160,29 @@ a:hover {
       <li><a href="posts/agentZeroSecurityWriteup.html">CVE-2025-55881 (Agent Zero) CSRF File Upload to RCE</a></li>
       <li><a href="posts/agentZeroSecurityWriteup.html">CVE-2025-55882 (Agent Zero) CSRF File Upload to RCE</a></li>
       <li><a href="https://www.linkedin.com/pulse/xss-safeline-waf-julian-b-f8ysc/">CVE-2025-55883 (SafeLine WAF) Authenticated XSS</a></li>
+      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Improper Certificate Validation</a></li>
+      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Insertion of Sensitive Information into Log File</a></li>
+      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Uncontrolled Resource Consumption</a></li>
+      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Server-Side Request Forgery</a></li>
+      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Race Condition</a></li>
+      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Denial of Service</a></li>
+      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Insecure Storage of Sensitive Information</a></li>
+      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Insecure Storage of Sensitive Information</a></li>
+      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Insecure Storage of Sensitive Information</a></li>
+      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Insecure Storage of Sensitive Information</a></li>
+      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Insecure Storage of Sensitive Information</a></li>
+      <li><a href="">CVE-2025-XXXX (Furbo Mobile Application) Insecure Storage of Sensitive Information</a></li>
+      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Plain text Transmission of Sensitive Information</a></li>
+      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Application Logic Bypass</a></li>
+      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Application Logic Bypass Leading to Denial of Service</a></li>
+      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Hardcoded Credentials</a></li>
+      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Hardcoded Password</a></li>
+      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Information Disclosure</a></li>
+      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Information Disclosure</a></li>
+      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Server-Side Request Forgery</a></li>
+      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Insecure Encryption Algorithm</a></li>
+
+      <li>Many more to come...</li>
 
       <li>Many more to come...</li>
     </ul>
