--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ a:hover {
   </div>
 
   <div class="articles">
-    <h2>[*] Latest Posts</h2>
+    <h2>[*] Recent Posts</h2>
         <div class="article">
       <a href="https://www.softwaresecured.com/post/hacking-furbo-a-hardware-research-project-part-1-acquiring-the-hardware">Hacking Furbo—A Hardware Research Project—Part 1: Acquiring the Hardware</a><br>
       <span>// In mid-March our research team began looking for a target to assess as part of a long-term project. After some time searching, we set our sights on Furbo. Tomofun, the creators of Furbo, offers two devices which you can set up in your home to monitor your pet's activities throughout the day and, with the higher-end Furbo 360, toss treats their way, send voice messages, and monitor their activities more thoroughly.</span>
@@ -102,37 +102,6 @@ a:hover {
       <a href="">Hacking Furbo—A Hardware Research Project—Part 6: The Finale</a><br>
       <span>// Final chapter: insecure Wi-Fi credentials, risky S3 log uploads, long-lived device tokens, and global MQTT activity exposure, plus our June 23, 2025 disclosure to Tomofun.</span>
     </div>
-        <div class="article">
-      <a href="posts/mindsdb_report.html">Don't Mind(sDB) me: RCE on MindsDB</a><br>
-      <span>// Vulnerability disclosure. By combining a path traversal with an arbitrary file upload vulnerability, RCE was achieved on the MindsDB AI analytics engine.</span>
-    </div>
-    <div class="article">
-      <a href="posts/spamtitan_vuln.html">Unauthenticated User Creation in SpamTitan</a><br>
-      <span>// Vulnerability disclosure. A missing authorization vulnerability discovered during research performed with Philippe Caturegli of Seralys.</span>
-    </div>
-    <div class="article">
-      <a href="posts/phishingWithGrok.html">Stealing Your Chats In 2 Clicks</a><br>
-      <span>// Using clickable links and hidden ASCII characters, I detail how a built-in feature of Grok can be used to phish unsuspecting users and exfiltrate memory.</span>
-    </div>
-    <div class="article">
-      <a href="posts/llmChatReview.html">I scraped every public LLM chat so you didn't have to</a><br>
-      <span>// I scraped and grepped every public LLM shared link, found secrets, and documented it all.</span>
-    </div>
-    <div class="article">
-      <a href="posts/agentZeroSecurityWriteup.html">Agent Zero Security Research</a><br>
-      <span>// A short blog on security research performed on the Agent Zero open-source project.</span>
-    </div>
-    <div class="article">
-      <a href="posts/IoT-Course-Review.html">Andrew Bellini's IoT and Hardware Hacking Course</a><br>
-      <span>// A review of Andrew Bellini's "Beginner's Guide to IoT and Hardware Hacking" course on TCM.</span>
-    </div>
-    <div class="article">
-      <a href="posts/Hardware-Testing-Purchase-List.html">Basic Hardware Testing Purchase Guide</a><br>
-      <span>// A basic hardware and IoT purchase guide for budget setups. Sources have been compiled for Canadian researchers.</span>
-    </div>
-
-    <!-- Add more articles here -->
-  </div>
   </div>
   <div class="articles">
     <h2>[*] Publications</h2>
