--- a/publications.html
+++ b/publications.html
@@ -130,6 +130,10 @@ body::-webkit-scrollbar-thumb:hover {
   <div class="articles">
     <h2>[*] Publications</h2>
     <div class="article">
+      <a href="/posts/hacking-furbo.html">Hacking Furbo: A Pet Project</a><br>
+      <span>// A six-part blog series detailing the reverse engineering of the Furbo devices and mobile application resulting in the identification of nearly two dozen vulnerabilities.</span>
+    </div>
+    <div class="article">
       <a href="https://www.404media.co/grok-exposes-underlying-prompts-for-its-ai-personas-even-putting-things-in-your-ass/">Grok Exposes Underlying Prompts for Its AI Personas: ‘EVEN PUTTING THINGS IN YOUR ASS’</a><br>
       <span>// The website for Elon Musk's Grok is exposing prompts for its anime girl, therapist, and conspiracy theory AI personas.</span>
     </div>
