--- a/index.html
+++ b/index.html
@@ -151,6 +151,18 @@ body::-webkit-scrollbar-thumb:hover {
       <a href="https://www.softwaresecured.com/post/hacking-the-meatmeet-bbq-probe3">Hacking the Meatmeet BBQ Probe — Part 3</a><br>
       <span>// We uncover BLE flaws in the Meatmeet BBQ probe that allowed us to take over the device, push malicious firmware, and even build a BLE BBQ Probe botnet.</span>
     </div>
+    <div class="article">
+      <a href="https://www.softwaresecured.com/post/hacking-the-meatmeet-bbq-probe---part-1">Hacking the Meatmeet BBQ Probe — Part 1</a><br>
+      <span>// We dismantled the Meatmeet Pro, monitored its BLE and network activity, and dumped the ESP32 flash for analysis.</span>
+    </div>
+    <div class="article">
+      <a href="https://www.softwaresecured.com/post/hacking-the-meatmeet-bbq-probe---part-2">Hacking the Meatmeet BBQ Probe — Part 2/a><br>
+      <span>// We break down the Meatmeet Android app and find a number of vulnerabilities including: hard coded credentials, insecure memory management, and an open storage bucket.</span>
+    </div>
+    <div class="article">
+      <a href="https://www.softwaresecured.com/post/hacking-the-meatmeet-bbq-probe3">Hacking the Meatmeet BBQ Probe — Part 3</a><br>
+      <span>// We uncover BLE flaws in the Meatmeet BBQ probe that allowed us to take over the device, push malicious firmware, and even build a BLE BBQ Probe botnet.</span>
+    </div>
         <div class="article">
       <a href="https://www.softwaresecured.com/post/hacking-furbo-a-hardware-research-project-part-1-acquiring-the-hardware">Hacking Furbo—A Hardware Research Project—Part 1: Acquiring the Hardware</a><br>
       <span>// In mid-March our research team began looking for a target to assess as part of a long-term project. After some time searching, we set our sights on Furbo. Tomofun, the creators of Furbo, offers two devices which you can set up in your home to monitor your pet's activities throughout the day and, with the higher-end Furbo 360, toss treats their way, send voice messages, and monitor their activities more thoroughly.</span>
@@ -189,6 +201,10 @@ body::-webkit-scrollbar-thumb:hover {
   <div class="vulnerabilities">
     <h2>[*] Recently Disclosed Vulnerabilities</h2>
     <ul>
+      <li><a href="https://gist.github.com/dead1nfluence/4dffc239b4a460f41a03345fd8e5feb5#file-remote-code-execution-md">
+CVE-2025-65824 (Meatmeet) Remote Code Execution (RCE)</a></li>
+<li><a href="https://gist.github.com/dead1nfluence/4dffc239b4a460f41a03345fd8e5feb5#file-device-takeover-ble-md">
+CVE-2025-XXXX (Meatmeet) Unauthenticated Device Takeover</a></li>
       <li><a href="https://vuldb.com/?id.328044">CVE-2025-11633 (Furbo 360, Furbo Mini) Improper Certificate Validation</a></li>
       <li><a href="https://vuldb.com/?id.328046">CVE-2025-11634 (Furbo 360, Furbo Mini) Insertion of Sensitive Information into Log File</a></li>
       <li><a href="https://vuldb.com/?id.328046">CVE-2025-11635 (Furbo 360, Furbo Mini) Uncontrolled Resource Consumption</a></li>
